package com.ai.applications.rag.ragmvp1.models;

public enum DocumentStatus {
    UPLOADED,
    PROCESSING,
    READY,
    FAILED,
    DELETED
}
