package com.ai.applications.rag.ragmvp1.models;

import java.util.UUID;

public record DocumentUploadedEvent(UUID documentId) {
}