package com.ai.applications.rag.ragmvp1.models;

public enum RoleName {
    ROLE_USER,
    ROLE_ADMIN
}
